# M3TA

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  ARES.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
deploy/: RUNBOOK.md  backup.sh  docker-compose.yml  provision.sh
docs/: ARCHITECTURE.md  ARES-CORE-REDESIGN.md  ARES-ULTRA-CODING.md  CLAUDE-CODE-PORT-STUDY.md  CODEX-LIFE-PHONE-BRIDGE.md  DEPLOYMENT-DIGITALOCEAN.md  aza-design-system.md  aza-harness-architecture.md  aza-harness-context.md  targets-integration-plan.md
scripts/: codex-life-check.mjs  package-tauri-runtime.mjs  rename-root-to-ares.ps1  web-preview-bridge.mjs
tauri/: package.json  tsconfig.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: main.rs
tests/: ares-anthropic.test.mjs  ares-c1-editloop.test.mjs  ares-garrison.test.mjs  ares-harness.test.mjs  ares-holotable.test.mjs  ares-recall.test.mjs  ares-serve.test.mjs  ares-targets.test.mjs  browser-live-harness.test.mjs  browser-recovery.test.mjs  c0-consolidation-invariants.test.mjs  c0-validation-gate.test.mjs  c4-multiedit.test.mjs  c7-command-allow-always.test.mjs  computeruse-premium.test.mjs  consciousness-context.test.mjs  effort-dial.test.mjs  gauntlet-edgecases-2.test.mjs  gauntlet-edgecases.test.mjs  living-surface.test.mjs  m0-engine.test.mjs  m1-ollama-anthropic.test.mjs  m1-ollama.test.mjs  m1-openai.test.mjs  m1-tools.test.mjs  mcp-http.test.mjs  mcp-oauth.test.mjs  md-render.test.mjs  (+32 more)
(+69 files in other folders)
